--- a/HKUser/doctor/doctor_list.html
+++ b/HKUser/doctor/doctor_list.html
@@ -6,7 +6,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<title>医生</title>
+		<title>选择医生</title>
 		<link rel="stylesheet" href="../css/mui.min.css" />
 		<link rel="stylesheet" href="../css/base.css" />
 		<link rel="stylesheet" href="../css/common.css" />
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">医生</h1>
+			<h1 class="mui-title">选择医生</h1>
 		</header>
 		<div class="mui-content">
 			<form>
