--- a/HKUser/my_center/about.html
+++ b/HKUser/my_center/about.html
@@ -21,8 +21,7 @@
 			<div class="about">名医汇依托于内地各知名医疗机构，及香港各大医院诊所等境内外的丰富医疗资源，为广大用户提供最新最全的行业资讯和咨询服务，打造国内最专注&最接地气的跨境医疗平台。</div>
 			<div class="contact_us">
 				<h2>联系方式</h2>
-				<p>电话：400-930-6288</p>
-				<p>邮箱：info@du-ms.com</p>
+				<p>客服电话：400-930-6288</p>
 			</div>
 			<h2>合作医院</h2>
 			<div class="cooperation" id="hospitalList"></div>
