--- a/HKUser/my_center/about_software.html
+++ b/HKUser/my_center/about_software.html
@@ -5,25 +5,8 @@
 		<title>关于软件</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" href="../css/mui.min.css" />
+		<link rel="stylesheet" href="../css/common.css" />
 		<style>
-			body{
-				background: #fff;
-			}
-			header h1{
-				font-size: 18px;				
-			}
-			.mui-bar{
-				background: #fff;
-				box-shadow: none;
-				border-bottom:1px solid #dedede;				
-			}
-			.mui-bar h1{
-				color: #33a2d7;
-				font-size: 18px;
-			}
-			.mui-bar a{
-				color: #33a2d7;				
-			}			
 			.mui-content{				
 				background: #fff;
 				padding:15px ;				
