--- a/HKUser/my_center/myD.html
+++ b/HKUser/my_center/myD.html
@@ -62,11 +62,11 @@
 							<span class="my-icon1"><img src="../img/wallet.png"></span>我的钱包
 						</div>
 					</li>
-					<!--<li class="mui-table-view-cell" id="tab_post.html">
+					<li class="mui-table-view-cell" id="tab_post.html">
 						<div class="mui-navigate-right">
-							<span class="my-icon1"><img src="../img/note.png"></span>我的评论
+							<span class="my-icon1"><img src="../img/note.png"></span>我的发帖
 						</div>
-					</li>-->
+					</li>
 					<li class="mui-table-view-cell" id="swipe.html">
 						<div class="mui-navigate-right">
 							<span class="my-icon1"><img src="../img/collection.png"></span>我的收藏
