--- a/HKUser/communicate/post_detail.html
+++ b/HKUser/communicate/post_detail.html
@@ -12,325 +12,9 @@
 		<link rel="stylesheet" href="../css/input.css" />
 		<link rel="stylesheet" href="../css/pullRefresh.css" />
 		<link rel="stylesheet" href="../css/iconfont-icon.css" />
+		<link rel="stylesheet" href="../css/imagePreview.css" />
+		<link rel="stylesheet" href="../css/center/post_detail.css" />
 	</head>
-	<style>
-		body,.mui-content{
-			background-color: #FFFFFF;
-		}
-		.post-list {
-			width: 100%;
-			overflow: hidden;
-			padding: 15px;
-			border-bottom: 1px solid #DEDEDE;
-		}
-		.doc-img {
-			color: #999;
-			font-size: 13px;
-			line-height: 25px;
-		}
-		.great {
-			color: #666;
-			font-size: 14px;
-			height: auto;
-			white-space: pre-wrap;	/*中文换行*/
-			word-break: break-all;/*英文换行*/
-		}
-		
-		.post-title {
-			overflow: hidden;
-		}
-		
-		.post-title-con {
-			width: 70%;
-			float: left;
-			font-size: 15px;
-		}
-		
-		.praise-img {
-			width: 30%;
-			font-size: 14px;
-			color: #33A2D7;
-			float: right;
-			text-align: right;
-		}
-		
-		.praise-img img {
-			width: 20px;
-		}
-		
-		.mui-pull-left {
-			width: 65px;
-			margin-right: 15px;
-		}
-		
-		.post-comment {
-			width: 100%;
-			overflow: hidden;
-			padding-top: 10px;
-		}
-		
-		.post-input {
-			width: 100%;
-			border-bottom: 1px solid #DEDEDE;
-			float: right;
-			padding-top: 5px;
-			padding-left: 10px;
-			font-size: 14px;
-		}
-		
-		.post-input input {
-			width: 74%;
-			height: 35px;
-			font-size: 12px;
-			border-radius: 3px;
-			border: 1px solid #dedede;
-		}
-		
-		.comment-btn {
-		    width: 20%;
-		    height: 34px;
-		    display: inline-block;
-		    margin-left: 10px;
-		    line-height: 22px;
-		    text-align: center;
-		    background-color: #33A2D7;
-		    color: #FFFFFF;
-		    border-radius: 5px;
-		}
-		
-		.comment-content {
-			width: 100%;
-			height: 35px;
-			line-height: 35px;
-			clear: both;
-			padding-left: 15px;
-			font-size: 14px;
-		}
-		
-		.comment-list {
-			width: 100%;
-			overflow: hidden;
-		}
-		
-		.comment-list-item {
-			width: 95%;
-			border-radius: 5px;
-			border: 1px solid #DEDEDE;
-			margin: 0px auto;
-			overflow: hidden;
-			padding: 10px 0 10px 10px;
-			margin-bottom: 5px;
-		}
-		
-		.comment-list-img {
-			width: 20%;
-			text-align: center;
-			float: left;
-			color: #999;
-			font-size: 15px;
-		}
-		
-		.comment-list-img img {
-			width: 50px;
-			height: 50px;
-			border-radius: 100%;
-			text-align: center;
-		}
-		
-		.comment-list-con {
-			width: 75%;
-			float: left;
-			margin-left: 10px;
-		}
-		
-		.comment-list-time {
-			color: #999;
-			font-size: 15px;
-		}
-		
-		.comment-list-content {
-			color: #666;
-			font-size: 14px;
-		}
-		.m-praise{
-			position: relative;
-		    top: 2px;
-		    width: 25px;
-		}
-		.praise.m-active{
-			content: url(../images/praise-after.png) !important;
-		}
-		.praise{
-			content: url(../images/praise-before.png) !important;
-		}
-		.mui-row{
-			border-bottom: 1px solid #DEDEDE;
-		}
-		.mui-row img{
-			width: 100%;
-			height: 80px;
-			padding: 5px;
-		}
-		.space{
-			height: 10px;
-			background-color: #F6F6F6;
-		}
-		/*图片预览*/
-		.mui-content-padded p{
-			display: block;
-		}
-		.mui-preview-image.mui-fullscreen {
-			position: fixed;
-			z-index: 20;
-			background-color: #000;
-		}
-		.mui-preview-header,
-		.mui-preview-footer {
-			position: absolute;
-			width: 100%;
-			left: 0;
-			z-index: 10;
-		}
-		.mui-preview-header {
-			height: 44px;
-			top: 0;
-		}
-		.mui-preview-footer {
-			height: 50px;
-			bottom: 0px;
-		}
-		.mui-preview-header .mui-preview-indicator {
-			display: block;
-			line-height: 25px;
-			color: #fff;
-			text-align: center;
-			margin: 15px auto 4;
-			width: 70px;
-			background-color: rgba(0, 0, 0, 0.4);
-			border-radius: 12px;
-			font-size: 16px;
-		}
-		.mui-preview-image {
-			display: none;
-			-webkit-animation-duration: 0.5s;
-			animation-duration: 0.5s;
-			-webkit-animation-fill-mode: both;
-			animation-fill-mode: both;
-		}
-		.mui-preview-image.mui-preview-in {
-			-webkit-animation-name: fadeIn;
-			animation-name: fadeIn;
-		}
-		.mui-preview-image.mui-preview-out {
-			background: none;
-			-webkit-animation-name: fadeOut;
-			animation-name: fadeOut;
-		}
-		.mui-preview-image.mui-preview-out .mui-preview-header,
-		.mui-preview-image.mui-preview-out .mui-preview-footer {
-			display: none;
-		}
-		.mui-zoom-scroller {
-			position: absolute;
-			display: -webkit-box;
-			display: -webkit-flex;
-			display: flex;
-			-webkit-box-align: center;
-			-webkit-align-items: center;
-			align-items: center;
-			-webkit-box-pack: center;
-			-webkit-justify-content: center;
-			justify-content: center;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			margin: 0;
-			-webkit-backface-visibility: hidden;
-		}
-		.mui-zoom {
-			-webkit-transform-style: preserve-3d;
-			transform-style: preserve-3d;
-		}
-		.mui-slider .mui-slider-group .mui-slider-item img {
-			width: auto;
-			height: auto;
-			max-width: 100%;
-			max-height: 100%;
-		}
-		.mui-android-4-1 .mui-slider .mui-slider-group .mui-slider-item img {
-			width: 100%;
-		}
-		.mui-android-4-1 .mui-slider.mui-preview-image .mui-slider-group .mui-slider-item {
-			display: inline-table;
-		}
-		.mui-android-4-1 .mui-slider.mui-preview-image .mui-zoom-scroller img {
-			display: table-cell;
-			vertical-align: middle;
-		}
-		.mui-preview-loading {
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
-			display: none;
-		}
-		.mui-preview-loading.mui-active {
-			display: block;
-		}
-		.mui-preview-loading .mui-spinner-white {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			margin-left: -25px;
-			margin-top: -25px;
-			height: 50px;
-			width: 50px;
-		}
-		.mui-preview-image img.mui-transitioning {
-			-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
-			transition: transform 0.5s ease, opacity 0.5s ease;
-		}
-		@-webkit-keyframes fadeIn {
-			0% {
-				opacity: 0;
-			}
-			100% {
-				opacity: 1;
-			}
-		}
-		@keyframes fadeIn {
-			0% {
-				opacity: 0;
-			}
-			100% {
-				opacity: 1;
-			}
-		}
-		@-webkit-keyframes fadeOut {
-			0% {
-				opacity: 1;
-			}
-			100% {
-				opacity: 0;
-			}
-		}
-		@keyframes fadeOut {
-			0% {
-				opacity: 1;
-			}
-			100% {
-				opacity: 0;
-			}
-		}
-		p img {
-			max-width: 100%;
-			height: auto;
-		}
-	</style>
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
@@ -348,7 +32,7 @@
 							<div id="postTitle" class="post-title-con"></div>
 							<div class="praise-img"><img id="praise" class="praise"/>&nbsp;<span id="likeCount">0</span></div>
 						</div>
-						<div class='doc-img'><span id="postNickname">用户名称</span>&emsp;时间：<span id="postDate"></span></div>
+						<div class='doc-img'><span id="postNickname">用户名称</span>&emsp;发布时间：<span id="postDate"></span></div>
 						<div id="postContent" class="great"></div>
 					</div>
 				</div>
@@ -359,7 +43,7 @@
 						<input type="text" id="to-comment"/>
 						<button type="button" class="comment-btn" id="comment" disabled="disabled">评论</button>
 					</div>
-					<div class="comment-content">评论</div>
+					<div class="comment-content">评论列表</div>
 					<div id="comment-list" class="comment-list"></div>
 				</div>
 			</div>
@@ -395,7 +79,7 @@
 						callback: function() {
 							pdata.offset=(pdata.limit)*page;
 							u.mypost('post/detailPost',pdata, false, function(data) {
-								_pull.endPullUpToRefresh((data.data.commentList || []).length == 5);
+								_pull.endPullUpToRefresh((data.data.commentList || []).length < 5);
 								if (data.code  == 0) {
 									page++;
 									loadList(data.data || []);
@@ -455,7 +139,7 @@
 						doc.getElementById("avatar").setAttribute("src",imgServer+post.avatar);
 						doc.getElementById("postTitle").innerHTML = post.postTitle;
 						
-						doc.getElementById("postDate").innerHTML = post.postDate;
+						doc.getElementById("postDate").innerHTML = post.postDate && post.postDate.substr(0,10);
 						doc.getElementById("postContent").innerHTML = post.postContent;
 						doc.getElementById("likeCount").innerHTML = clickCount;
 						likeCount = likeCountData.likeCount || 0;
@@ -482,6 +166,10 @@
 							"</div>";
 							list.appendChild(item);
 						});
+					}else if(data.code == 500 && "未登录" == data.msg){
+						u.goLogin();
+					}else{
+						_.toast(data.msg || '服务器异常');
 					}
 				},myerror);
 			});
@@ -584,8 +272,10 @@
 							_.toast(data.msg);
 							toCommentObj.value = "";
 							submitObj.setAttribute("disabled","disabled");
+						}else if(data.code == 500 && "未登录" == data.msg){
+							u.goLogin();
 						}else{
-							_.toast(data.msg);
+							_.toast(data.msg || '服务器异常');
 						}
 					},myerror);
 				}
