--- a/HKUser/communicate/release_post.html
+++ b/HKUser/communicate/release_post.html
@@ -11,45 +11,9 @@
 		<link rel="stylesheet" href="../css/common.css" />
 		<link rel="stylesheet" href="../css/input.css" />
 		<link rel="stylesheet" href="../css/iconfont.css" />
+		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/center/release_post.css" />
 	</head>
-	<style>
-		.release-post {
-			width: 100%;
-			overflow: hidden;
-		}
-		
-		.release-post-item {
-			padding: 10px 20px 0 20px;
-		}
-		
-		.release-post-img {
-			padding: 10px 20px 10px 20px;
-			line-height: 24px;
-			border-bottom: 1px solid #DEDEDE;
-			color: #666;
-			font-size: 14px;
-		}
-		
-		.release-post-img>img{
-			width: 50px;
-			height: 50px;
-			border-radius: 3px;
-			margin-right: 10px;
-		}
-		
-		.release-post-checkbox {
-			padding: 10px 20px 15px 20px;
-			color: #666;
-			font-size: 14px;
-		}
-		.state-description {
-			width: 100%;
-			margin: 0 auto;
-		}
-		#sheet a {
-			color: #333333;
-		}
-	</style>
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
