--- a/HKUser/index.html
+++ b/HKUser/index.html
@@ -37,20 +37,20 @@
 				</div>
 				<ul class="mui-table-view mui-grid-view mui-grid-9">
 					<li id="hospital" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-						<img class="icon-img" src="images/index/icon_2.png">
-						<div class="mui-media-body">在线诊疗</div>
+						<img class="icon-img" src="images/index/icon_hos.png">
+						<div class="mui-media-body font-size-12">在线诊疗</div>
 					</li>
 					<li id="medical" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-						<img class="icon-img" src="images/index/icon_01.png">
-						<div class="mui-media-body">药品中心</div>
+						<img class="icon-img" src="images/index/icon_med.png">
+						<div class="mui-media-body font-size-12">药品中心</div>
 					</li>
 					<li id="check" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-						<img class="icon-img" src="images/index/icon_4.png">
-						<div class="mui-media-body">检测服务</div>
+						<img class="icon-img" src="images/index/icon_server.png">
+						<div class="mui-media-body font-size-12">检测服务</div>
 					</li>
 					<li id="vaccine" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3">
-						<img class="icon-img" src="images/index/icon_5.png">
-						<div class="mui-media-body">疫苗接种</div>
+						<img class="icon-img" src="images/index/icon_vac.png">
+						<div class="mui-media-body font-size-12">疫苗接种</div>
 					</li>
 				</ul>
 				<div id="doctor-more" class="tuijian font-size-14"><i class="icon_index_doctors"></i>&ensp;优秀名医<i class="icon_more mui-pull-right"></i></div>
@@ -164,7 +164,6 @@
 					}, myerror);
 				}, 100);
 				//信息列表
-
 				doc.getElementById("message").addEventListener('tap', function(e) {
 					if(!w.getUser()) {
 						w.openView("userLogin.html");
