--- a/HKUser/my_center/modify_payPwd.html
+++ b/HKUser/my_center/modify_payPwd.html
@@ -49,17 +49,16 @@
 					if(isEmojiCharacter(oldPayPwdObj.value) || isEmojiCharacter(payPwdObj.value) || isEmojiCharacter(repayObj.value)){
 						_.toast("不支持表情输入");
 						return;
+					}else if(u.isNull(oldPayPwdObj.value)){
+						_.toast("请输入原支付密码");
+						return;
+					}else if(u.isNull(payPwdObj.value)){
+						_.toast("请输入新支付密码");
+						return;
+					}else if(u.isNull(repayObj.value)){
+						_.toast("请再次输入新支付密码");
+						return;
 					}
-//					else if(u.isNull(oldPayPwdObj.value)){
-//						_.toast("请输入原支付密码");
-//						return;
-//					}else if(u.isNull(payPwdObj.value)){
-//						_.toast("请输入新支付密码");
-//						return;
-//					}else if(u.isNull(repayObj.value)){
-//						_.toast("请再次输入新支付密码");
-//						return;
-//					}
 					privateToken = w.getItem("privateToken");
 					pdata.privateToken = privateToken;
 					oldPayPwd = oldPayPwdObj.value.trim();
