增加图形验证码
增加图形验证码

--- a/HKUser/info/info_detail.html
+++ b/HKUser/info/info_detail.html
@@ -12,6 +12,13 @@
 		<link rel="stylesheet" href="../css/detail.css" />
 		<link rel="stylesheet" href="../css/iconfont.css"/>
 		<link rel="stylesheet" href="../css/info/info_detail.css" />
+		<style>
+			.info-detail{
+				text-align: center;
+				margin: 10px 0 10px;
+			}
+			.info-title{text-align: justify;}
+		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
