--- a/HKUser/forgetPwd.html
+++ b/HKUser/forgetPwd.html
@@ -21,6 +21,10 @@
 				        <input type="tel" class="mui-input-clear" placeholder="请输入您的手机号码" id="mobile">
 				    </div>
 				    <div class="code mui-input-row">
+				        <input type="text" maxlength="4" placeholder="请输入图形验证码" id="imgcodeinput">
+				        <img id="img_code" src="" />
+				    </div>
+				    <div class="code mui-input-row">
 				        <input type="number" maxlength="6" placeholder="请输入短信验证码" id="code">
 				        <button id="getCode" type="button" class="mui-btn mui-btn-blue main-bg-color" disabled="disabled">获取验证码</button>
 				    </div>
@@ -41,22 +45,37 @@
 			var codeObj = doc.getElementById("code");
 			var getCodeObj = doc.getElementById("getCode");
 			var nextObj = doc.getElementById("next");
+			var img_codeObj =document.getElementById("img_code"),imgcodeinputObj = document.getElementById("imgcodeinput");
 			var mobileValue = null;
-			//获取验证码按钮控制
+			img_code.src = SRC + ""+Math.random(1,9)*1000+"";
+			//獲取驗證碼按钮控制
 			mobileObj.addEventListener("input",function(){
-				if(this.value.length > 0 && u.checkPhone(this.value)){
+				if(this.value.length > 0 && u.checkPhone(this.value) && imgcodeinputObj.value.length == 4){
 					getCodeObj.removeAttribute("disabled");
 				}else{
 					getCodeObj.setAttribute("disabled","disabled");
 				}
 			});
+			//检测图形验证码输入框
+			imgcodeinputObj.addEventListener("input",function(){
+				if(this.value.length == 4  && mobileObj.value.length > 0 && u.checkPhone(mobileObj.value)){
+					getCodeObj.removeAttribute("disabled");
+				}else{
+					getCodeObj.setAttribute("disabled","disabled");
+				}
+			})
+			//图片验证码
+			img_codeObj.addEventListener("tap",function(){
+				this.src = SRC + ""+Math.random(1,9)*1000+"";
+			})
 			//获取验证码
 			getCodeObj.addEventListener("tap",function(){
 				var self = this;
 				mobileValue = mobileObj.value;
 				var pdata = {
 					mobile:mobileValue,
-					flag:1
+					flag:1,
+					captcha:imgcodeinputObj.value
 				};
 				u.mypost("api/sendIdentifyCode",pdata,true,function(data){
 					if(data.code.result == 0 && data.msg == '请求成功'){
