--- a/HKUser/my_center/boundpho.html
+++ b/HKUser/my_center/boundpho.html
@@ -20,6 +20,10 @@
 					<input type="tel" id="phone" placeholder="请输入需要绑定的手机号" />
 				</div>
 				<div class="pho-row">
+					<input type="text" id="imgcodeinput" placeholder="请输入图形验证码" />
+					<img id="img_code" src="" />
+				</div>
+				<div class="pho-row">
 					<input type="text" id="code" placeholder="请输入短信验证码" />
 					<button id="getCode" type="button" class="mui-btn mui-btn-blue main-bg-color" disabled="disabled">获取验证码</button>
 				</div>
@@ -32,28 +36,43 @@
 	<script type="text/javascript">
 		(function(_, doc, u, w) {
 			_.init({swipeBack: false});
-			var getCodeObj = doc.getElementById("getCode"),codeObj = doc.getElementById("code"),phoneObj = doc.getElementById("phone"),btnObj = doc.getElementById("btnOk"),mobileValue = null,privateToken = null;
-			//获取验证码按钮控制
-			phoneObj.addEventListener("input", function() {
-				if(this.value.length > 0 && u.checkPhone(this.value)) {
+			var getCodeObj = doc.getElementById("getCode"),codeObj = doc.getElementById("code"),mobileObj = doc.getElementById("phone"),btnObj = doc.getElementById("btnOk"),mobileValue = null,privateToken = null;
+			var img_codeObj =document.getElementById("img_code"),imgcodeinputObj = document.getElementById("imgcodeinput");
+			img_code.src = SRC + ""+Math.random(1,9)*1000+"";
+			//獲取驗證碼按钮控制
+			mobileObj.addEventListener("input",function(){
+				if(this.value.length > 0 && u.checkPhone(this.value) && imgcodeinputObj.value.length == 4){
 					getCodeObj.removeAttribute("disabled");
-				} else {
-					getCodeObj.setAttribute("disabled", "disabled");
+				}else{
+					getCodeObj.setAttribute("disabled","disabled");
 				}
 			});
+			//检测图形验证码输入框
+			imgcodeinputObj.addEventListener("input",function(){
+				if(this.value.length == 4  && mobileObj.value.length > 0 && u.checkPhone(mobileObj.value)){
+					getCodeObj.removeAttribute("disabled");
+				}else{
+					getCodeObj.setAttribute("disabled","disabled");
+				}
+			})
+			//图片验证码
+			img_codeObj.addEventListener("tap",function(){
+				this.src = SRC + ""+Math.random(1,9)*1000+"";
+			})
 			//获取验证码
 			getCodeObj.addEventListener("tap", function() {
 				var self = this;
-				mobileValue = phoneObj.value;
+				mobileValue = mobileObj.value;
 				var pdata = {
-					mobile: mobileValue
+					mobile: mobileValue,
+					captcha:imgcodeinputObj.value
 				};
 				u.mypost("api/sendIdentifyCode", pdata, false, function(data) {
-					if(data.msg == '请求成功') {
+					if(data.code.result == 0 && data.msg == '请求成功'){
+						_.toast("验证码已发送");
 						u.time(self);
-						_.toast('验证码已发送')
-					} else {
-						_.toast(data.msg)
+					}else{
+						_.toast(data.msg);
 					}
 				}, myerror);
 			});
@@ -76,7 +95,7 @@
 				var openId = web.openId;
 				var id = web.oId;
 				btnObj.addEventListener('tap', function() {
-					var phone = phoneObj.value.trim();
+					var phone = mobileObj.value.trim();
 					var code = codeObj.value.trim();
 					var pdata = {};
 					if(id == "weixin") {
