--- a/HKUser/userLogin.html
+++ b/HKUser/userLogin.html
@@ -226,15 +226,13 @@
 		       		plus.nativeUI.closeWaiting();
 			        if(parseInt(data.code) == 0){
 			        	var lastVer = data.data.version || '1.0.0';
-			        	wgtVer = wgtVer && wgtVer.substring(0,wgtVer.indexOf('.'));
-			        	lastVer = lastVer && lastVer.substring(0,lastVer.indexOf('.'));
+			        	wgtVer = wgtVer && wgtVer.substring(0,wgtVer.lastIndexOf('.'));
+			        	lastVer = lastVer.substring(0,lastVer.lastIndexOf('.'));
 			        	if(Number(lastVer) > Number(wgtVer)){//如果最新的大版本号较大 需要下载新安装包
 			        		plus.nativeUI.confirm("检查到当前版本有更新，下载最新安装包？",
 			                function(event){
 			                    if(event.index ==0){
-			                    	plus.runtime.openURL('http://a.app.qq.com/o/simple.jsp?pkgname=io.dcloud.H568440CA',function(err){
-					        			console.log("open err==="+JSON.stringify(err));
-					        		})
+			                    	plus.runtime.openURL('http://a.app.qq.com/o/simple.jsp?pkgname=io.dcloud.H568440CA',function(err){})
 			                    }                        
 			                } ,'系统消息',['马上下载','下次再说']); 
 			        	}else{
