--- a/HKUser/my_case_history/add_case.html
+++ b/HKUser/my_case_history/add_case.html
@@ -143,7 +143,7 @@
 				}else if(selectVal == "无"){
 					pdata.stages = 0;
 				}
-				pdata.privateToken = privateToken;
+				pdata.privateToken = w.getItem("privateToken");
 				pdata.illName  = illName;
 				pdata.realName = name;
 				pdata.age = age;
