--- a/HKUser/my_center/boundpho.html
+++ b/HKUser/my_center/boundpho.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="pho-row">
 					<input type="text" id="imgcodeinput" placeholder="请输入图形验证码" />
-					<img id="img_code" src="" />
+					<img id="img_code" src="../images/default-news.png" />
 				</div>
 				<div class="pho-row">
 					<input type="text" id="code" placeholder="请输入短信验证码" />
@@ -38,9 +38,11 @@
 			_.init({swipeBack: false});
 			var getCodeObj = doc.getElementById("getCode"),codeObj = doc.getElementById("code"),mobileObj = doc.getElementById("phone"),btnObj = doc.getElementById("btnOk"),mobileValue = null,privateToken = null;
 			var img_codeObj =document.getElementById("img_code"),imgcodeinputObj = document.getElementById("imgcodeinput");
-			img_code.src = SRC + ""+Math.random(1,9)*1000+"";
 			//獲取驗證碼按钮控制
 			mobileObj.addEventListener("input",function(){
+				if(this.value.length > 0 && u.checkPhone(this.value)){
+					img_codeObj.src = SRC + "mobile="+this.value+"&random="+Math.random(1,9)*1000+"";
+				}
 				if(this.value.length > 0 && u.checkPhone(this.value) && imgcodeinputObj.value.length == 4){
 					getCodeObj.removeAttribute("disabled");
 				}else{
@@ -57,7 +59,7 @@
 			})
 			//图片验证码
 			img_codeObj.addEventListener("tap",function(){
-				this.src = SRC + ""+Math.random(1,9)*1000+"";
+				this.src = SRC + "mobile="+mobileObj.value+"&random="+Math.random(1,9)*1000+"";
 			})
 			//获取验证码
 			getCodeObj.addEventListener("tap", function() {
