--- a/HKUser/my_center/forgetPayPwd.html
+++ b/HKUser/my_center/forgetPayPwd.html
@@ -22,7 +22,7 @@
 				    </div>
 				    <div class="code mui-input-row">
 				        <input type="text" maxlength="4" placeholder="请输入图形验证码" id="imgcodeinput">
-				        <img id="img_code" src="" />
+				        <img id="img_code" src="../images/default-news.png" />
 				    </div>
 				    <div class="code mui-input-row">
 				        <input type="number" maxlength="6" placeholder="请输入短信验证码" id="code">
@@ -43,9 +43,11 @@
 			var pdata = {},mobileObj = doc.getElementById("mobile"),codeObj = doc.getElementById("code"),getCodeObj = doc.getElementById("getCode"),nextObj = doc.getElementById("next");
 			var mobileValue = null;
 			var img_codeObj =document.getElementById("img_code"),imgcodeinputObj = document.getElementById("imgcodeinput");
-			img_code.src = SRC + ""+Math.random(1,9)*1000+"";
 			//獲取驗證碼按钮控制
 			mobileObj.addEventListener("input",function(){
+				if(this.value.length > 0 && u.checkPhone(this.value)){
+					img_codeObj.src = SRC + "mobile="+this.value+"&random="+Math.random(1,9)*1000+"";
+				}
 				if(this.value.length > 0 && u.checkPhone(this.value) && imgcodeinputObj.value.length == 4){
 					getCodeObj.removeAttribute("disabled");
 				}else{
@@ -62,7 +64,7 @@
 			})
 			//图片验证码
 			img_codeObj.addEventListener("tap",function(){
-				this.src = SRC + ""+Math.random(1,9)*1000+"";
+				this.src = SRC + "mobile="+mobileObj.value+"&random="+Math.random(1,9)*1000+"";
 			})
 			//获取验证码
 			getCodeObj.addEventListener("tap",function(){
