--- a/HKUser/register.html
+++ b/HKUser/register.html
@@ -23,7 +23,7 @@
 				    </div>
 				    <div class="code mui-input-row">
 				        <input type="text" maxlength="4" placeholder="请输入图形验证码" id="imgcodeinput">
-				        <img id="img_code" src="" />
+				        <img id="img_code" src="images/default-news.png" />
 				    </div>
 				    <div class="code mui-input-row">
 				        <input type="number" maxlength="6" placeholder="请输入短信验证码" id="code">
@@ -54,9 +54,11 @@
 			var mobileObj = doc.getElementById("mobile"),getCodeObj = doc.getElementById("getCode");
 			var codeObj = doc.getElementById("code"),nextObj = doc.getElementById("next"),pwdObj = doc.getElementById("pwd"),repwdObj = doc.getElementById("rePwd"),img_codeObj =document.getElementById("img_code"),imgcodeinputObj = document.getElementById("imgcodeinput");
 			var mobileValue = null;
-			img_code.src = SRC + ""+Math.random(1,9)*1000+"";
 			//獲取驗證碼按钮控制
 			mobileObj.addEventListener("input",function(){
+				if(this.value.length > 0 && u.checkPhone(this.value)){
+					img_codeObj.src = SRC + "mobile="+this.value+"&random="+Math.random(1,9)*1000+"";
+				}
 				if(this.value.length > 0 && u.checkPhone(this.value) && imgcodeinputObj.value.length == 4){
 					getCodeObj.removeAttribute("disabled");
 				}else{
@@ -73,7 +75,7 @@
 			})
 			//图片验证码
 			img_codeObj.addEventListener("tap",function(){
-				this.src = SRC + ""+Math.random(1,9)*1000+"";
+				this.src = SRC + "mobile="+mobileObj.value+"&random="+Math.random(1,9)*1000+"";
 			})
 			//获取验证码
 			getCodeObj.addEventListener("tap",function(){
